<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/header_categories">
        <menu android:checkableBehavior="single">
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home"
                android:title="@string/home" />
            <item
                android:id="@+id/nav_categories"
                android:icon="@drawable/ic_categories"
                android:title="@string/categories" />
            <item
                android:id="@+id/nav_favorites"
                android:icon="@drawable/ic_starred"
                android:title="@string/favorites" />
            <item
                android:id="@+id/nav_search"
                android:icon="@drawable/ic_search"
                android:title="@string/search" />

        </menu>
    </item>

    <item android:title="@string/header_extras">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_about_us"
                android:title="@string/about_us" />
            <item
                android:id="@+id/nav_terms_condition"
                android:icon="@drawable/ic_tc"
                android:title="@string/terms_condition" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
        </menu>
    </item>

    <item android:title="@string/header_user">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/profile" />
            <item
                android:id="@+id/nav_my_events"
                android:icon="@drawable/ic_my_events"
                android:title="@string/my_events" />
        </menu>
    </item>

</menu>
