<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_10dp" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/search_uppercase"
                android:id="@+id/textView"
                android:layout_weight="1"
                android:gravity="left" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50dp"
                android:background="@drawable/edittext_round"
                android:padding="@dimen/dimen_10dp"
                android:id="@+id/txtSearch"
                android:hint="@string/placeholder_search" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/search_nearby"
                android:layout_weight="1"
                android:gravity="left" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dimen_10dp">

                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/seekBarRadius"
                    android:layout_gravity="center"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Small Text"
                    android:id="@+id/tvRadius"
                    android:gravity="right"
                    android:layout_gravity="center"
                    android:textSize="@dimen/text_size_12sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dimen_20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/categories_uppercase"
                android:layout_weight="1"
                android:gravity="left" />

            <FrameLayout
                android:id="@+id/frameCategory"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/dimen_5dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/all_categories"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:id="@+id/tvCategory"
                        android:layout_gravity="center|left"
                        android:layout_marginLeft="@dimen/dimen_10dp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView2"
                        android:src="@drawable/ic_arrow_right"
                        android:layout_gravity="center|right"
                        android:layout_marginRight="@dimen/dimen_5dp" />
                </LinearLayout>
            </FrameLayout>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <android.support.v7.widget.AppCompatButton
                style="@style/AppTheme.GreenButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50dp"
                android:text="@string/search"
                android:id="@+id/btnSearch"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_gravity="bottom" />
        </FrameLayout>

    </LinearLayout>
</LinearLayout>
