<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_10dp">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_20dp">

            <com.libraries.imageview.RoundedImageView
                android:id="@+id/imgViewThumb"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:scaleType="center"
                android:src="@mipmap/bg_image_thumb_placeholder" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:text="@string/click_to_add_edit"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_white_color"
                android:textSize="@dimen/text_size_12sp"
                android:layout_marginBottom="@dimen/dimen_20dp" />

        </FrameLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_50dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50dp"
                android:background="@drawable/edittext_round"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:padding="@dimen/dimen_10dp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/placeholder_fullname"
                android:id="@+id/txtFullName"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30dp">

            <android.support.v7.widget.AppCompatButton
                style="@style/AppTheme.GreenButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/update"
                android:id="@+id/btnUpdate"
                android:layout_gravity="center_horizontal" />

            <android.support.v7.widget.AppCompatButton
                style="@style/AppTheme.GreenButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/logout"
                android:id="@+id/btnLogout"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_20dp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
